// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`дилер должен отрендерить компонент дилера бу 1`] = `
<div
  className="CardSellerNamePlace__owner-info CardSellerNamePlace__owner-info_dealer"
>
  <Link
    className="CardSellerNamePlace__name CardSellerNamePlace__name_type_commercial"
    color="black"
    target="_blank"
    title="автоцентр"
    url="link/dealer-page/?category=cars&section=used&dealer_code=autocenter"
  >
    автоцентр
  </Link>
  <div
    className="CardSellerNamePlace__address"
  >
    <Link
      className="CardSellerNamePlace__place"
      color="gray"
      onClick={[Function]}
    >
      <MetroListPlace
        className=""
        ellipsis={true}
        nowrap={true}
        offer={
          Object {
            "category": "cars",
            "salon": Object {
              "code": "autocenter",
            },
            "section": "used",
            "seller": Object {
              "location": Object {
                "region_info": Object {
                  "name": "Москва",
                },
              },
              "name": "автоцентр",
            },
            "seller_type": "COMMERCIAL",
            "sub_category": "cars",
          }
        }
        showAddress={true}
        showMetro={true}
      />
    </Link>
  </div>
</div>
`;

exports[`дилер должен отрендерить компонент для неоф. дилера новых 1`] = `
<div
  className="CardSellerNamePlace__owner-info CardSellerNamePlace__owner-info_dealer"
>
  <Link
    className="CardSellerNamePlace__name CardSellerNamePlace__name_type_commercial"
    color="black"
    target="_blank"
    title="автоцентр"
    url="link/dealer-page/?category=cars&section=new&dealer_code=autocenter"
  >
    автоцентр
  </Link>
  <div
    className="CardSellerNamePlace__address"
  >
    <Link
      className="CardSellerNamePlace__place"
      color="gray"
      onClick={[Function]}
    >
      <MetroListPlace
        className=""
        ellipsis={true}
        nowrap={true}
        offer={
          Object {
            "category": "cars",
            "salon": Object {
              "code": "autocenter",
              "is_official": false,
            },
            "section": "new",
            "seller": Object {
              "location": Object {
                "region_info": Object {
                  "name": "Москва",
                },
              },
              "name": "автоцентр",
            },
            "seller_type": "COMMERCIAL",
            "sub_category": "cars",
          }
        }
        showAddress={true}
        showMetro={true}
      />
    </Link>
  </div>
</div>
`;

exports[`дилер должен отрендерить компонент для оф. дилера новых авто 1`] = `null`;

exports[`дилер должен отрендерить компонент для оф. дилера новых мото 1`] = `
<div
  className="CardSellerNamePlace__owner-info CardSellerNamePlace__owner-info_dealer"
>
  <HoveredTooltip
    defaultPadding={true}
    directions={
      Array [
        "right-center",
        "right-bottom",
        "top-center",
        "bottom-center",
        "bottom-left",
      ]
    }
    isVisible={false}
    mainOffset={10}
    popupTheme="light"
    secondaryOffset={-10}
    showTimeout={200}
    tooltipContent="Официальный дилер"
  >
    <div
      className="CardSellerNamePlace__avatar"
    >
      <IconSvg
        className="CardSellerNamePlace__official-dealer-sign"
        id="svgID"
        size="48"
      />
    </div>
  </HoveredTooltip>
  <Link
    className="CardSellerNamePlace__name CardSellerNamePlace__name_type_commercial"
    color="black"
    target="_blank"
    title="автоцентр"
    url="link/dealer-page-official/?category=cars&section=new&dealer_code=autocenter"
  >
    автоцентр
  </Link>
  <div
    className="CardSellerNamePlace__address"
  >
    <Link
      className="CardSellerNamePlace__place"
      color="gray"
      onClick={[Function]}
    >
      <MetroListPlace
        className=""
        ellipsis={true}
        nowrap={true}
        offer={
          Object {
            "category": "moto",
            "salon": Object {
              "code": "autocenter",
              "is_official": true,
            },
            "section": "new",
            "seller": Object {
              "location": Object {
                "region_info": Object {
                  "name": "Москва",
                },
              },
              "name": "автоцентр",
            },
            "seller_type": "COMMERCIAL",
            "sub_category": "cars",
          }
        }
        showAddress={true}
        showMetro={true}
      />
    </Link>
  </div>
</div>
`;

exports[`дилер должен отрендерить текст вместо ссылки если не указан salon.code 1`] = `
<div
  className="CardSellerNamePlace__owner-info CardSellerNamePlace__owner-info_dealer"
>
  <Link
    className="CardSellerNamePlace__name CardSellerNamePlace__name_type_commercial"
    color="black"
    target="_blank"
    title="автоцентр"
    url={null}
  >
    автоцентр
  </Link>
  <div
    className="CardSellerNamePlace__address"
  >
    <Link
      className="CardSellerNamePlace__place"
      color="gray"
      onClick={[Function]}
    >
      <MetroListPlace
        className=""
        ellipsis={true}
        nowrap={true}
        offer={
          Object {
            "category": "cars",
            "salon": Object {
              "code": undefined,
            },
            "section": "used",
            "seller": Object {
              "location": Object {
                "region_info": Object {
                  "name": "Москва",
                },
              },
              "name": "автоцентр",
            },
            "seller_type": "COMMERCIAL",
            "sub_category": "cars",
          }
        }
        showAddress={true}
        showMetro={true}
      />
    </Link>
  </div>
</div>
`;

exports[`дилер правильно формирует ссылку на кол-во доступных предложений 1`] = `
<Link
  className="CardSellerNamePlace__count"
  color="gray"
  target="_blank"
  url="link/dealer-page-official/?category=cars&section=new&dealer_code=autocenter"
>
   
  ·
   
  42 автомобиля
</Link>
`;

exports[`частник должен отрендерить компонент 1`] = `
<div
  className="CardSellerNamePlace__owner-info"
>
  <div
    className="CardSellerNamePlace__avatar"
  >
    <OfferSellerUserpic
      className="CardSellerNamePlace__avatar-icon"
      offer={
        Object {
          "category": "cars",
          "section": "used",
          "seller": Object {
            "name": "Рудольф",
          },
          "seller_type": "PRIVATE",
        }
      }
    />
  </div>
  <div
    className="CardSellerNamePlace__name"
    title="Рудольф"
  >
    Рудольф
  </div>
  <div
    className="CardSellerNamePlace__address"
  >
    <Link
      className="CardSellerNamePlace__place"
      color="gray"
      onClick={[Function]}
    >
      <MetroListPlace
        className="CardSellerNamePlace__place"
        ellipsis={true}
        nowrap={true}
        offer={
          Object {
            "category": "cars",
            "section": "used",
            "seller": Object {
              "name": "Рудольф",
            },
            "seller_type": "PRIVATE",
          }
        }
        showAddress={true}
        showMetro={true}
      />
    </Link>
  </div>
</div>
`;
